--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <div class="container">
     <h4 class="mt-2 text-center">Search Image for create slider</h4>
-    <div class="form-inline mt-3 d-flex justify-content-center">
+    <div class="form-inline mt-5 d-flex justify-content-center">
       <div class="input-group col-md-6 mb-2">
         <input type="text" class="form-control" id="search" placeholder="nature">
       </div>
@@ -61,6 +61,13 @@
       </div>
     </div>
   </div>
+
+
+  <footer class="mt-5">
+    <p>Copyright &copy; 2021 All rights reserved | This template is made with <span class="icons icon-heart"></span> by <a href="#">Sheikh Mahmudul Hasan</a></p>
+</footer>
+
+
   <!-- Optional JavaScript -->
   <script src="./app.js"></script>
 </body>
